...
    <item
        android:id="@+id/navigation_item3"
        android:icon="@drawable/ic_add_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_item4"
        android:icon="@drawable/ic_account_24"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_item5"
        android:icon="@drawable/ic_person_24"
...
